--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 							<div class="podcast-episode">
 								<div class="podcast-episode-player" data-episode-download="https://raw.githubusercontent.com/djpeewee/djpeeweeoficial.github.io/main/Chivirika%20Intro.mp3" data-episode-download-button="Download Episode (831.6 KB)" data-episode-duration="00:41" data-episode-size="831.6 KB">
 									<audio class="wp-audio-shortcode" preload="none" style="width: 100%;" controls="controls">
-										<source src="/common/Chivirika Intro.mp3" type="audio/mpeg">
-										<source src="/common/Chivirika Intro.mp3" type="audio/ogg">
+										<source src="common/Chivirika Intro.mp3" type="audio/mpeg">
+										<source src="common/Chivirika Intro.mp3" type="audio/ogg">
 									</audio>
 								</div>
 							</div>
