--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-﻿<!doctype html>
+﻿<!doctype html> 
 <html lang="en" class="no-js">
 <head>
-	<title>DJ Peewee Oficial</title>
+	<title>Castilo</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<meta name="description" content="Castilo is fully responsive creative audio podcast HTML5 site template that looks great on any device.">
 	<meta name="keywords" content="Castilo, HTML5, Template, Design, Development">
 
-	<link href="../css.css?family=Oswald:300,400%7CKarla:400,700" rel="stylesheet">
+	<link href="css.css?family=Oswald:300,400%7CKarla:400,700" rel="stylesheet">
 
 	<link rel="shortcut icon" href="favicon.png">
 
@@ -137,7 +137,7 @@
 							</div>
 							<p>
 								<a href="#" class="button button-white"><span class="zmdi zmdi-fire"></span> Mediafire</a>
-								<a href="#" class="button button-white"><span class="zmdi zmdi-google-play"></span> Google Play</a>
+								<a href="#" class="button button-white"><span class="zmdi zmdi-cloud"></span> Box</a>
 								<a href="#" class="button button-white"><span class="zmdi zmdi-rss"></span> RSS Feed</a>
 							</p>
 						</div>
