--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 							</div>
 						</div>
 						<div class="pagination pagination-load-more">
-							<a href="#" class="button"><span class="zmdi zmdi-facebook"></span> Follow Us</a>
+							<a href="#" class="button"><span class="zmdi zmdi-instagram"></span> Follow Us</a>
 						</div>
 					</div>
 				</div>
